[package]
name = "listener"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }